bezig met testen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "src/components/Graphs/Graphs.test.jsx"],
+  "include": ["src", "src/components/Graphs/Graphs.test.jsx", "tests"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
